<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sample_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        style="@style/Widget.SampleMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_message" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/get_gps_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_gps_permission" />

    <TextView
        android:id="@+id/status_gps_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gps_permission_not_granted"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/get_bg_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_bg_permission" />

    <TextView
        android:id="@+id/status_bg_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background_permission_not_granted"
        />

</LinearLayout>

